# LOCAL_LLM_API

./: README.md  main.py  mistral_api.pid  pyproject.toml  start_llm_api.sh  stop_llm_api.sh
config/: example_config.toml
test/: README.md  chat_app.py  run_test_client.sh
utils/: __init__.py  server_utils.py
