[project]
name = "local-llm-api"
version = "0.1.0"
description = "Local API server for Mistral-7B-v0.1 model"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "accelerate",
    "bitsandbytes",
    "pydantic",
    "gputil",
    "streamlit>=1.40.1",
    "dotenv>=0.9.9",
    "sentencepiece>=0.2.0",
    "hf-xet>=1.1.2",
]
